k8s/gitops/argo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server-ingress
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: argo.jameshounshell.com
      http:
        paths:
          - backend:
              service:
                name: argo-server
                port:
                  name: web
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - jameshounshell.com
